# easyparquet

./: .gitignore  Cargo.toml  README.md  customers.parquet  names.parquet
easyparquet/: Cargo.toml
easyparquet/src/: backups.rs  config.rs  lib.rs  main.rs  readers.rs  writers.rs
easyparquet/src/backups/: batch_backup.rs  table_backup.rs
easyparquet/src/data/: columns.rs
easyparquet/src/readers/: mysql_reader.rs
easyparquet/src/writers/: parquet_writer.rs
rustbank/: Cargo.toml
rustbank/data/: Accounts.csv  Users.csv
rustbank/src/: backup.rs  config.rs  data.rs  generate.rs  lib.rs  main.rs  upload.rs
src/: backup.rs  backups.rs  config.rs  lib.rs  main.rs  readers.rs  writers.rs
src/backup/: batch_backup.rs  columns.rs  queries.rs  table_backup.rs
src/backups/: batch_backup.rs  table_backup.rs
src/readers/: mysql_reader.rs
src/writers/: parquet_writer.rs
