[package]
name = "easyparquet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arrow = "55.1.0"
async-trait = "0.1.88"
dotenvy = "0.15.7"
futures = "0.3.31"
mysql_async = "0.36.1"
parquet = { version = "55.2.0", features = ["arrow"] }
rust_decimal = "1.37.2"
test-case = "3.3.1"
tokio = { version = "1.45.1", features = ["full"] }
