[package]
name = "rustbank"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
csv = "1.3.1"
csv-async = "1.3.1"
dotenvy = "0.15.7"
easyparquet = {path = "../easyparquet"}
fake = { version = "4.3.0", features = ["chrono", "derive", "rust_decimal"] }
futures = "0.3.31"
mysql_async = { version = "0.36.1", features = ["chrono", "rust_decimal"] }
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.46.1"
tokio-util = { version = "0.7.15", features = ["compat"] }
